Kong Global Gateway With ExternalName/istio/00-mesh-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global-kic
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: global-kic
---
apiVersion: v1
kind: Namespace
metadata:
  name: retail-banking-kic
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: retail-banking-kic
---
apiVersion: v1
kind: Namespace
metadata:
  name: retail-banking-team
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: retail-banking-team
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments-kic
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: payments-kic
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments-team
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: payments-team
---
apiVersion: v1
kind: Namespace
metadata:
  name: grc-kic
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: grc-kic
---
apiVersion: v1
kind: Namespace
metadata:
  name: grc-team
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: grc-team
