Kong Global Gateway With ExternalName/istio/00-mtls-permissive.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mesh-mtls-permissive
  namespace: istio-system
spec:
  mtls:
    mode: PERMISSIVE
